# RatataRtx

./: .gitignore  CMakeLists.txt  README.md
RatataR/: CMakeLists.txt
RatataR/include/: RatataR.hpp
RatataR/src/: RatataR.cpp  main.cpp
Testing-Files/: READ.txt
Testing-Files/LOCALAPPDATA_RatataR/: dxvk-ratatouille.conf
Testing-Files/compatfiles/: RatataRconfig.ini  dxvk.conf  dxwrapper.ini  rtx.conf  user.conf
Testing-Files/compatfiles/.trex/: bridge.conf
hook/: CMakeLists.txt
hook/include/: ConfigHandler.h  ConfigHandler.hpp  MemoryUtils.h  RtxRemixBridge.hpp  SigScanner.h  SignaturePatterns.h  SignaturePatterns.hpp  hook.h  hook.hpp
hook/include/Zouna/: DynArray_Z.hpp  Types_Z.h
hook/include/rpc-client/: levels.h  levels.hpp  rpc.h
hook/src/: ConfigHandler.cpp  MemoryUtils.cpp  RtxRemixBridge.cpp  SigScanner.cpp  hook.cpp  main.cpp
hook/src/rpc-client/: discord_manager.cpp  levels.cpp  rpc.cpp
rtx-remix/: dxvk.conf
